--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,49 @@
 * {
     padding: 0;
     margin: 0;
+    background-color: black;
+    color: aliceblue;
 }
 
+h2 {
+    text-align: center;
+    font-size: 2rem;
+}
+
+button {
+    width: 25%;
+    height: 30px;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.player-options {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 2%;
+}
+
+.scoreboard {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 2%;
+}
+
+span#playerScore, span#cpuScore {
+    margin-left: 2px;
+}
+
+#roundResult, #gameResult {
+    text-align: center;
+}
+
+#restartButton {
+    margin: 20px auto;
+    text-align: center;
+    align-items: center;
+}
